[gd_scene load_steps=2 format=3 uid="uid://dvki50r0j4dui"]

[ext_resource type="Script" path="res://scripts/enemic.gd" id="1_q1b36"]

[node name="PCEnemicScene" type="PanelContainer" groups=["enemic_grup"]]
size_flags_horizontal = 3
script = ExtResource("1_q1b36")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/PanelContainer2"]
layout_mode = 2

[node name="LabelNom" type="Label" parent="VBoxContainer2/PanelContainer2/VBoxContainer"]
layout_mode = 2
text = "Mob"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer2/PanelContainer2/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
show_percentage = false

[node name="ValorMoral" type="Label" parent="VBoxContainer2/PanelContainer2/VBoxContainer"]
layout_mode = 2
text = "Mob"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
